# poderoso-vim

./: coc-settings.json  cosa.liotree  init.vim  init.vim.example  vim-tree.txt
TreeSitter-Lab/: Makefile  liotree.vim
TreeSitter-Lab/liotree/: CMakeLists.txt  Cargo.toml  Makefile  a.liotree  grammar.js  package.json  pom.xml  pyproject.toml  setup.py  tree-sitter.json
TreeSitter-Lab/liotree/bindings/go/: binding_test.go
TreeSitter-Lab/liotree/bindings/java/main/io/github/treesitter/jtreesitter/liotree/: TreeSitterLiotree.java
TreeSitter-Lab/liotree/bindings/java/test/: TreeSitterLiotreeTest.java
TreeSitter-Lab/liotree/bindings/node/: index.d.ts  index.js
TreeSitter-Lab/liotree/bindings/python/tests/: test_binding.py
TreeSitter-Lab/liotree/bindings/python/tree_sitter_liotree/: __init__.py
TreeSitter-Lab/liotree/bindings/rust/: build.rs  lib.rs
TreeSitter-Lab/liotree/bindings/swift/TreeSitterLiotreeTests/: TreeSitterLiotreeTests.swift
TreeSitter-Lab/liotree/queries/: highlights.scm
TreeSitter-Lab/liotree/src/: grammar.json  node-types.json  parser.c
TreeSitter-Lab/ts-liotree/: grammar.js  package.json
UltiSnips/: NvimTree.snippets  emmet.vim  maps.vim  maps.vim.old  norg.snippets  plugin-config.vim  plugins.vim  svg.snippets  tex.snippets  texis_conf.lua
colors/: lang_quiet.vim
ftdetect/: norg.lua
ftplugin/: liotree.vim  liotree.vim.old
lua/config/: 3rdplugins.lua  NavBuddy.lua  bufferFoldRules.lua  centerplugs.lua  colorizer_conf.lua  config_swenv.lua  csvtools_conf.lua  jsonfly.lua  jupytextnvim.lua  lint-conf.lua  liotree-conf.lua  liotree-conf.nvim  livepreview.lua  liveshare.lua  lovdogTexTools.lua  lovdog_configs.lua  lspconfig-conf.lua  pdf.lua  (+17 more)
my_plugs/: ;  cwd_to_bash_below  liotreeparser.lua  nerd-dict  sudo_open  synpy_texrender.py
spell/: en.utf-8.add  en.utf-8.add.spl
syntax/: liotree.vim
(+7 files in other folders)
